data/raw_logs/syntactic/syn_6.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_6.c:1:18: error: expected declaration specifiers or '...' before ')' token
    1 | void func(int a, ) {}
      |                  ^
